--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -180,3 +180,9 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+
+# Hide xwaylandvideobrige popup
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
