Added color picker

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,6 +179,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Color picker
+bind = $mainMod, C, exec, hyprpicker -a ; notify-send "Color copied" "The color has been copied to your clipboard"
+
+# Screenshots
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 
 # Hide xwaylandvideobrige popup
