--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,8 +11,6 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1,1920x1080@75,0x0,1
-monitor=DP-2,1920x1080@60,1920x0,1
 monitor=,preferred,auto,auto
 
 # Fix for waybar
@@ -34,7 +32,7 @@ env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = it
     kb_variant =
     kb_model =
     kb_options = compose:ralt
@@ -43,7 +41,7 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -104,7 +102,9 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = on
+	workspace_swipe_distance = 400
+	workspace_swipe_cancel_ratio = 0.3
 }
 
 # Example per-device config
