Single display hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ input {
     kb_layout = it
     kb_variant =
     kb_model =
-    kb_options = compose:ralt
+    kb_options = 
     kb_rules =
 
     follow_mouse = 1
@@ -103,8 +103,8 @@ master {
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = on
-	workspace_swipe_distance = 400
-	workspace_swipe_cancel_ratio = 0.3
+    workspace_swipe_distance = 400
+    workspace_swipe_cancel_ratio = 0.3
 }
 
 # Example per-device config
@@ -123,10 +123,6 @@ misc {
 	disable_hyprland_logo = true
 	disable_splash_rendering = true
 }
-
-workspace = HDMI-A-1, 1
-workspace = DP-2, 2
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
