Updated monitors layout

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,8 +11,8 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1,1920x1080@75,0x0,1
-monitor=DP-2,1920x1080@60,1920x0,1
+monitor=HDMI-A-2,1920x1080@75,0x0,1
+monitor=HDMI-A-1,1920x1080,1920x0,1
 monitor=,preferred,auto,auto
 
 # Fix for waybar
@@ -125,7 +125,7 @@ misc {
 }
 
 workspace = HDMI-A-1, 1
-workspace = DP-2, 2
+workspace = HDMI-A-2, 2
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -140,6 +140,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
