--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,8 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,preferred,auto,auto
+monitor=,preferred,auto,auto,mirror,eDP-1
 
 # Fix for waybar
 monitor=,addreserved,-10,0,0,0
@@ -42,6 +43,7 @@ input {
 
     touchpad {
         natural_scroll = yes
+	clickfinger_behavior = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -63,10 +65,14 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+   	
+	blur {
+		enabled = yes
+    	size = 3
+    	passes = 1
+    	new_optimizations = on
+	}
+
 
     drop_shadow = yes
     shadow_range = 4
