Added volume, media and brightness control

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -187,6 +187,22 @@ bind = $mainMod, C, exec, hyprpicker -a ; notify-send "Color copied" "The color 
 # Screenshots
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 
+# Volume keys
+bind = ,code:123,exec,pactl -- set-sink-volume @DEFAULT_SINK@ +5%
+bind = ,code:122,exec,pactl -- set-sink-volume @DEFAULT_SINK@ -5%
+bind = ,code:121,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# Media keys
+bind = ,code:173,exec,playerctl previuos
+bind = ,code:172,exec,playerctl play-pause
+bind = ,code:171,exec,playerctl next
+
+# Backlight brightness
+bind = ,code:237,exec,brightnessctl --device="smc::kbd_backlight" set 10%-
+bind = ,code:238,exec,brightnessctl --device="smc::kbd_backlight" set +10%
+
+bind = ,code:232,exec,brightnessctl --device="acpi_video0" set 10%-
+bind = ,code:233,exec,brightnessctl --device="acpi_video0" set +10%
 # Hide xwaylandvideobrige popup
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
