--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,6 +179,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bind = $mainMod, F, fullscreen
 
+# Resize
+bind = $mainMod SHIFT, right, resizeactive, 10 0
+bind = $mainMod SHIFT, left, resizeactive, -10 0
+bind = $mainMod SHIFT, up, resizeactive, 0 -10
+bind = $mainMod SHIFT, down, resizeactive, 0 10
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
