--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-2,1920x1080@75,0x0,1
+monitor=HDMI-A-2,1920x1080,0x0,1
 monitor=HDMI-A-1,1920x1080,1920x0,1
 monitor=,preferred,auto,auto
 
@@ -135,7 +135,7 @@ workspace = HDMI-A-2, 2
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod, E, exec, dolphin
@@ -188,6 +188,12 @@ bind = $mainMod, C, exec, hyprpicker -a ; notify-send "Color copied" "The color 
 
 # Screenshots
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+
+# Media keys
+bind = , code:172, exec, playerctl play-pause
+bind = , code:174, exec, playerctl stop
+bind = , code:173, exec, playerctl previous
+bind = , code:171, exec, playerctl next
 
 # Hide xwaylandvideobrige popup
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
