--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -138,7 +138,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, kitty bash -c broot
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
