--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,auto,auto
-monitor=,preferred,auto,auto,mirror,eDP-1
+monitor=HDMI-A-1,highres,auto,auto
 
 # Fix for waybar
 monitor=,addreserved,-10,0,0,0
@@ -22,9 +22,9 @@ monitor=,addreserved,-10,0,0,0
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = swaybg -i ~/bg.png
-exec-once = dunst
-exec-once = waybar
+exec-once = swaybg -i ~/bg.png &
+exec-once = dunst &
+exec-once = waybar & 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -185,6 +185,13 @@ bind = $mainMod SHIFT, left, resizeactive, -10 0
 bind = $mainMod SHIFT, up, resizeactive, 0 -10
 bind = $mainMod SHIFT, down, resizeactive, 0 10
 
+# Swap windows
+bind = $mainMod ALT SHIFT, left, movewindow, l
+bind = $mainMod ALT SHIFT, right, movewindow, r
+bind = $mainMod ALT SHIFT, up, movewindow, u
+bind = $mainMod ALT SHIFT, down, movewindow, d 
+
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
@@ -201,7 +208,7 @@ bind = ,code:122,exec,pactl -- set-sink-volume @DEFAULT_SINK@ -5%
 bind = ,code:121,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Media keys
-bind = ,code:173,exec,playerctl previuos
+bind = ,code:173,exec,playerctl previous
 bind = ,code:172,exec,playerctl play-pause
 bind = ,code:171,exec,playerctl next
 
